# python-dtl

./: .pylintrc  MANIFEST.in  Makefile  README.mkd  mypy.ini  pyproject.toml  setup.cfg  tox.ini
src/dtl/: __init__.py  ast_to_ir.py  cmd.py  eval.py  io.py  ir.py  ir_to_cmd.py  lexer.py  main.py  manifest.py  mappings.py  nodes.py  parser.py  parser_generator.py  tokens.py  types.py
tests/: conftest.py  test_faa.py  test_interpreter.py  test_parser.py
