[bdist_wheel]
universal = 1

[metadata]
name = dtl
version = attr: dtl.__version__
license = Apache 2.0
license_file = LICENSE
description = Python implementation of the Data Transformation Language
long_description = file: README.rst
author = Ben Mather
author_email = bwhmather@bwhmather.com
maintainer = Ben Mather
maintainer_email = bwhmather@bwhmather.com
url = https://github.com/bwhmather/python-dtl
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache 2.0 License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
package_dir=
    =src
packages = find:

install_requires=
    pyarrow
    validation
    lalr >= 0.2.0
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dtl = dtl._main:main
